# chumby-controlpanel

./: .gitignore  CMakeLists.txt  README.md  chumby-controlpanel.pro  controlpanel.cpp  controlpanel.h  dllmanager.cpp  dllmanager.h  main.cpp  plugin.cpp  plugin.h  pluginmanager.h  testplugin.cpp
Dashboards/: CTestConfig.cmake  ChumbyPanelNightly.cmake  Tools.cmake  run_nightly
controlpanel/: CMakeLists.txt  Makefile  alarm.cpp  alarm.h  alarmdaemon.cpp  alarmdaemon.h  alarmwidget.cpp  alarmwidget.h  alarmwidget.ui  audioplugin.cpp  audioplugin.h  btwrapper.cpp  btwrapper.h  chumby-controlpanel  config.h.in  controlpanel.cpp  controlpanel.h  controlpanel.pro  controlpanel.qrc  controlpanel.ui  dllmanager.cpp  dllmanager.h  loadingWidget.ui  main.cpp  moc_controlpanel.cpp  msgException.hpp  musiccontrol.cpp  musiccontrol.h  plugin.cpp  plugin.h  ringtoneplugin.cpp  ringtoneplugin.h
modules/: ChumbyImage.cmake  CompilerFlags.cmake  FindASound.cmake  FindAtomix.cmake  FindBlueTune.cmake  FindLibTS.cmake  FindNeptune.cmake  Toolchain-arm.cmake  Tools.cmake
plugins/: CMakeLists.txt  plugins.pro
plugins/birdsplugin/: CMakeLists.txt  birds.cpp  birds.h  birds.qrc  birdsanimation.h  birdswidget.cpp  birdswidget.h  birdswidget.ui  flukso.cpp  flukso.h  normalanimation.cpp  normalanimation.h
plugins/chumbykbddriver/: CMakeLists.txt  chumbykbddriver.pro  chumbykbddriverplugin.cpp  chumbykbddriverplugin.h  chumbykbdhandler.cpp  chumbykbdhandler.h
plugins/clockplugin/: CMakeLists.txt  alarmdetails.cpp  alarmdetails.h  alarmdetails.ui  alarmform.cpp  alarmform.h  alarmform.ui  clockplugin.cpp  clockplugin.h  clockplugin.pro  clockplugin.qrc  clockwidget.cpp  clockwidget.h  clockwidget.ui  daypage.cpp  daypage.h  namepage.h  namepage.ui  snoozedalarmspage.cpp  snoozedalarmspage.h  snoozedalarmspage.ui  snoozepage.h  snoozepage.ui  sourcepage.cpp  sourcepage.h  sourcepage.ui  timepage.ui  volumepage.cpp  volumepage.h  volumepage.ui
plugins/dispvaluesplugin/: CMakeLists.txt  Makefile  README  dispval.qrc  dispvaluesplugin.pro  flukso.conf
plugins/dispvaluesplugin/src/: CMakeLists.txt  dispval.cpp  dispval.h  main.cpp
plugins/dispvaluesplugin/src/plotter/: converter.h  plotsettings.cpp  plotsettings.h  plotter.cpp  plotter.h  qpointd.cpp  qpointd.h
plugins/dispvaluesplugin/src/spritevis/: mice.qrc  qcustomgraphview.cpp  qcustomgraphview.h  tacho.cpp  tacho.h  zeiger.cpp  zeiger.h
plugins/helloworldplugin/: CMakeLists.txt  Makefile  helloworld.cpp  helloworld.h  helloworld.pro
plugins/netconfigplugin/: netconfigplugin.pro
plugins/netconfigplugin/src/: CMakeLists.txt  icons.qrc  main.cpp  wizard.cpp  wizard.h
plugins/netconfigplugin/src/chumbyvkbd/: chumbyvkbd.cpp  chumbyvkbd.h
plugins/netconfigplugin/src/chumbyvnumpad/: chumbyvnumpad.cpp  chumbyvnumpad.h  icons_numblock.qrc
plugins/nightplugin/: CMakeLists.txt  alarmdetails.cpp  alarmdetails.h  alarmdetails.ui  alarmform.cpp  alarmform.ui  alarmwizard.cpp  alarmwizard.h  daypage.cpp  daypage.h  daypage.ui  namepage.cpp  nightplugin.cpp  nightplugin.h  nightplugin.pro  nightwidget.cpp  nightwidget.h  nightwidget.ui  snoozepage.cpp  snoozepage.h  snoozepage.ui  sourcepage.cpp  sourcepage.h  sourcepage.ui  summarypage.cpp  summarypage.h  summarypage.ui  timepage.cpp  timepage.h  timepage.ui
plugins/radioplugin/: CMakeLists.txt  radioplugin.cpp  radioplugin.h  radioplugin.pro  radioplugin.qrc
plugins/radioplugin/crad/: crad_content_handler.cpp  crad_content_handler.h  crad_crossdomain_handler.cpp  crad_crossdomain_handler.h  crad_interface.c  crad_interface.h  crad_internal.h  crad_rds_decoder.c  crad_rds_decoder.h  crad_return_codes.c  qndriver.c  qndriver.h  qnio.c  qnio.h
tools/: CMakeLists.txt  debugchumby  debugchumby.in  env.sh.in  flukso.conf.in  start_network
